--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -31,14 +31,14 @@ a {
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s;
-    color: #fd3d57;
+    color: #403dfd;
 }
 a:hover{
     color: #f38493;
 }
 textarea:focus {
-    -webkit-box-shadow: 0px 0px 2px #fd3d57ad !important;
-            box-shadow: 0px 0px 2px #fd3d57ad !important;
+    -webkit-box-shadow: 0px 0px 2px #403dfdad !important;
+            box-shadow: 0px 0px 2px #403dfdad !important;
 }
 h1,
 h2,
@@ -72,11 +72,11 @@ ul {
 }
 
 .text-color {
-    color: #FD3D57 !important;
+    color: #403dfd !important;
 }
 
 .bg-color {
-    background-color: #FD3D57 !important;
+    background-color: #403dfd !important;
 }
 
 .shadow_sm {
@@ -121,7 +121,7 @@ ul {
 }
 
 .default_link:hover {
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .text_black {
@@ -140,8 +140,8 @@ ul {
     padding-top: 56px;
 }
 input:focus, textarea:focus {
-    -webkit-box-shadow: 0px 0px 2px #fd3d57ad !important;
-            box-shadow: 0px 0px 2px #fd3d57ad !important;
+    -webkit-box-shadow: 0px 0px 2px #403dfdad !important;
+            box-shadow: 0px 0px 2px #403dfdad !important;
 }
 
 /* Preloader */
@@ -198,14 +198,14 @@ header {
 }
 
 .search {
-    border: 1px solid #FD3D57;
+    border: 1px solid #403dfd;
     border-radius: 5px;
     width: 675px;
 }
 
 .search_category {
     width: 145px;
-    border-right: 1px solid #FD3D57;
+    border-right: 1px solid #403dfd;
     background: #fff;
     border-radius: 6px 0 0 6px;
 }
@@ -238,14 +238,17 @@ header {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+            
 }
 
 .search_input input {
     width: 100%;
     padding: 10px 20px;
     border: none;
-    font-size: 14px;
+    font-size: 14px; 
+    /* border-radius: 5px 0 0 5px; */
 }
+
 
 .search_input input::-webkit-input-placeholder {
     font-size: 14px;
@@ -277,7 +280,8 @@ header {
 
 .search_subimt button {
     border: none;
-    background-color: #FD3D57;
+    /* background-color: #FD3D57; */
+    background-color: #403dfd;
     width: 100%;
     display: block;
     padding: 10px 15px;
@@ -327,7 +331,7 @@ a.single_sresult_product:hover {
 }
 
 .header_icon a.icon_wrp:hover {
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 
@@ -336,7 +340,7 @@ a.single_sresult_product:hover {
     right: -8px;
     top: 13px;
     font-size: 11px;
-    background: #fd3d57;
+    background: #403dfd;
     border-radius: 50%;
     width: 18px;
     height: 18px;
@@ -356,7 +360,7 @@ nav {
 
 .all_category {
     width: 200px;
-    background-color: #FD3D57;
+    background-color: #403dfd;
     position: relative;
 }
 
@@ -436,7 +440,7 @@ nav {
 }
 
 .nav_bar .subnav li:hover a {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .nav_bar > li.withsubs > a > span {
@@ -593,7 +597,7 @@ nav {
 }
 
 .ac_links a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .ac_links .myac img {
@@ -660,7 +664,7 @@ nav {
 }
 
 .mega_categories a:hover {
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .mega_menu_wrap:first-child {
@@ -762,7 +766,7 @@ nav {
 
 .single_feature {
     min-height: 90px;
-    border: 1px solid #fd3d57;
+    border: 1px solid #403dfd;
     border-radius: 3px;
 }
 
@@ -788,7 +792,7 @@ nav {
             transform: translateX(-50%);
     width: 120px;
     height: 2px;
-    background: #fd3d57;
+    background: #403dfd;
 }
 
 h2.section_title_3 {
@@ -837,7 +841,7 @@ h2.section_title_3 {
     font-size: 18px;
     line-height: 16px;
     margin-bottom: 8px;
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .offertext h4 {
@@ -953,7 +957,7 @@ h2.section_title_3 {
     position: absolute;
     right: 15px;
     top: 15px;
-    color: #fd3d57;
+    color: #403dfd;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -982,7 +986,7 @@ h2.section_title_3 {
 }
 
 .topariv_cont a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .topariv_cont p {
@@ -1000,8 +1004,8 @@ h2.section_title_3 {
 
 .full_atc_btn button {
     width: 100%;
-    border: 1px solid #FD3D57;
-    background: #FD3D57;
+    border: 1px solid #403dfd;
+    background: #403dfd;
     border-radius: 0 0 3px 3px;
     color: #fff;
     font-size: 16px;
@@ -1017,7 +1021,7 @@ h2.section_title_3 {
 
 .full_atc_btn button:hover {
     background-color: transparent;
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .topariv_cont .org_price {
@@ -1116,7 +1120,7 @@ h2.section_title_3 {
 }
 
 .price span.org_price {
-    color: #fd3d57;
+    color: #403dfd;
     margin-right: 5px;
 }
 
@@ -1124,7 +1128,7 @@ h2.section_title_3 {
     margin: 0 8px;
     height: 40px;
     width: 40px;
-    background: #fd3d57;
+    background: #403dfd;
     text-align: center;
     border-radius: 50%;
     color: #fff;
@@ -1157,8 +1161,8 @@ h2.section_title_3 {
 }
 
 .default_btn {
-    border: 1px solid #FD3D57;
-    background: #FD3D57;
+    border: 1px solid #403dfd;
+    background: #403dfd;
     color: #fff;
     padding: 8px 24px;
     border-radius: 3px;
@@ -1182,10 +1186,10 @@ h2.section_title_3 {
 .default_btn:hover,
 .default_btn.second {
     background-color: transparent;
-    color: #FD3D57;
+    color: #403dfd;
 }
 .default_btn.second:hover {
-    background: #FD3D57;
+    background: #403dfd;
     color: #fff;
 }
 .default_btn.xs_btn {
@@ -1238,7 +1242,7 @@ footer {
 }
 
 footer.colored {
-    background: #fd3d571a;
+    background: #403dfd1a;
 }
 
 .footer_logo img {
@@ -1316,7 +1320,7 @@ a.instagram {
 }
 
 .footer_menu a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .footer_contact p {
@@ -1434,7 +1438,7 @@ footer.white {
 }
 
 .banner_slider button.slick-arrow:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .banner_slider button.slick-next.slick-arrow,
@@ -1542,8 +1546,8 @@ h4.filter_title {
 }
 
 .view_filter .view_icon.active {
-    background-color: #FD3D57;
-    border: 1px solid #FD3D57;
+    background-color: #403dfd;
+    border: 1px solid #403dfd;
     color: #FFFFFF;
 }
 
@@ -1564,7 +1568,7 @@ button#mobile_filter_btn {
     right: 10px;
     top: 8px;
     cursor: pointer;
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 /* price range slider */
@@ -1601,7 +1605,7 @@ button#mobile_filter_btn {
 }
 
 .price-range-slider .range-bar .ui-slider-range {
-    background-color: #FD3D57;
+    background-color: #403dfd;
 }
 
 .price-range-slider .range-value {
@@ -1637,8 +1641,8 @@ button#mobile_filter_btn {
 
 .color_selector .single_size_opt .size_inp:checked + label {
     border: 2px solid #eceef0;
-    -webkit-box-shadow: 0 0 0 2px #fd3d57;
-            box-shadow: 0 0 0 2px #fd3d57;
+    -webkit-box-shadow: 0 0 0 2px #403dfd;
+            box-shadow: 0 0 0 2px #403dfd;
 }
 
 /* shop products */
@@ -1729,8 +1733,8 @@ p.product_list_desc {
 }
 
 button.list_product_btn {
-    border: 1px solid #FD3D57;
-    background: #FD3D57;
+    border: 1px solid #403dfd;
+    background: #403dfd;
     color: #fff;
     padding: 6px 15px;
     font-size: 13px;
@@ -1762,7 +1766,7 @@ button.list_product_btn .icon {
 
 button.list_product_btn.wish {
     background: transparent;
-    color: #FD3D57;
+    color: #403dfd;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
@@ -1770,14 +1774,14 @@ button.list_product_btn.wish {
     -o-transition: 0.3s;
 }
 button.list_product_btn.wish:hover {
-    background: #FD3D57;
+    background: #403dfd;
     color: #fff;
 
 }
 
 button.list_product_btn:hover {
     background: transparent;
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 /* shopping cart */
@@ -1863,14 +1867,14 @@ button.list_product_btn:hover {
 }
 
 .cart_cont h5:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .cart_cont p.price {
     font-size: 15px;
     font-weight: 700;
     font-family: 'Roboto', sans-serif;
-    color: #fd3d57;
+    color: #403dfd;
     margin-bottom: 0px;
 }
 
@@ -1900,7 +1904,7 @@ button.list_product_btn:hover {
     margin-bottom: 0;
     font-weight: 700;
     font-family: 'Roboto', sans-serif;
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .cart_remove {
@@ -1912,7 +1916,7 @@ button.list_product_btn:hover {
 }
 
 .cart_remove:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .cart_qnty_btn:hover {
@@ -1955,13 +1959,13 @@ button.list_product_btn:hover {
 .cart_sum_coupon button {
     width: 35%;
     border: none;
-    background: #fd3d57;
+    background: #403dfd;
     border-radius: 0 5px 5px 0;
     color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
     font-weight: 500;
-    border: 1px solid #fd3d57;
+    border: 1px solid #403dfd;
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s;
@@ -1969,13 +1973,13 @@ button.list_product_btn:hover {
 
 .cart_sum_coupon button:hover {
     background: transparent;
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .cart_sum_pros button {
     width: 100%;
-    border: 1px solid #fd3d57;
-    background: #fd3d57;
+    border: 1px solid #403dfd;
+    background: #403dfd;
     text-align: center;
     color: #fff;
     padding: 8px 10px;
@@ -1994,7 +1998,7 @@ button.list_product_btn:hover {
 
 .cart_sum_pros button:hover {
     background: transparent;
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .wishlist .cart_cont h5 {
@@ -2012,7 +2016,7 @@ button.list_product_btn:hover {
 }
 
 .cart_cont .instock span.outstock {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .shop_cart_title.sopcart_ttl span:first-child {
@@ -2029,7 +2033,7 @@ button.list_product_btn:hover {
 
 /* breadcrums */
 .breadcrumbs a {
-    color: #FD3D57;
+    color: #403dfd;
     font-size: 16px;
     position: relative;
     display: block;
@@ -2122,7 +2126,7 @@ button.list_product_btn:hover {
 }
 
 .single_viewslid_nav.slick-current img {
-    border-color: #fd3d57;
+    border-color: #403dfd;
 }
 
 .product_base_info h1 {
@@ -2290,8 +2294,8 @@ button.list_product_btn:hover {
 }
 
 .pbt_single_btn.active {
-    border-color: #FD3D57;
-    color: #FD3D57;
+    border-color: #403dfd;
+    color: #403dfd;
 }
 
 .pbt_info_text p {
@@ -2586,7 +2590,7 @@ button.list_product_btn:hover {
 }
 
 .single_billing_inp label span {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .single_billing_inp p.inp_err_msg {
@@ -2783,7 +2787,7 @@ p.checkorder_price {
 }
 
 .single_payment_method.active {
-    border: 1px solid #FD3D57;
+    border: 1px solid #403dfd;
 }
 
 .single_payment_method.active::after {
@@ -2796,7 +2800,7 @@ p.checkorder_price {
     color: #fff;
     font-size: 10px;
     z-index: 2;
-    background: #FD3D57;
+    background: #403dfd;
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -2858,9 +2862,10 @@ p.checkorder_price {
 header.home-2 {
     padding: 12px 0;
 }
-
+/* COLOR NAVBAR */
 nav.home-2 {
-    background: #FD3D57;
+    /* background: #FD3D57; */
+    background: #403dfd;
     padding: 0;
 }
 
@@ -2917,7 +2922,7 @@ nav.home-2 {
 }
 
 .home-2 .nav_bar > li:hover > a {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .home_2_hero {
@@ -3006,7 +3011,7 @@ span.sidebarclose {
 
 .home_2_hero ul.slick-dots li,
 .banner_slider ul.slick-dots li {
-    border: 2px solid #fd3d57;
+    border: 2px solid #403dfd;
     background: transparent;
     line-height: 0;
     font-size: 0;
@@ -3021,7 +3026,7 @@ span.sidebarclose {
 
 .home_2_hero ul.slick-dots li.slick-active,
 .banner_slider ul.slick-dots li.slick-active {
-    background: #fd3d57;
+    background: #403dfd;
 }
 
 .home_2_hero ul.slick-dots,
@@ -3181,7 +3186,7 @@ span.sidebarclose {
 }
 
 .sresult_content a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .sresult_content {
@@ -3236,7 +3241,7 @@ span.sidebarclose {
     right: 0;
     width: 24px;
     height: 18px;
-    background: #fd3d57;
+    background: #403dfd;
     text-align: center;
     line-height: 20px;
     color: #fff;
@@ -3277,7 +3282,7 @@ span.sidebarclose {
 }
 
 .topr_content a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 /* new arrivale */
@@ -3312,7 +3317,7 @@ span.sidebarclose {
 }
 
 .sna_content a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .sna_content h4 {
@@ -3405,7 +3410,7 @@ form.subscribe_form input {
     width: 100%;
     background: #fff;
     border-radius: 5px 0 0 5px;
-    border: 1px solid #fd3d57;
+    border: 1px solid #403dfd;
     border-right: none;
     font-size: 14px;
     padding: 11px 20px;
@@ -3413,9 +3418,9 @@ form.subscribe_form input {
 
 .subscribe_form button {
     min-width: 120px;
-    background: #fd3d57;
+    background: #403dfd;
     color: #fff;
-    border: 1px solid #fd3d57;
+    border: 1px solid #403dfd;
     border-radius: 0 5px 5px 0;
     -webkit-transition: .3s;
     -o-transition: .3s;
@@ -3424,7 +3429,7 @@ form.subscribe_form input {
 
 .download_cont form button:hover {
     background: transparent;
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .download_links {
@@ -3519,7 +3524,7 @@ form.subscribe_form input {
 
 .acprof_links a.active,
 .acprof_links a:hover {
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .acprof_links:last-child {
@@ -3549,7 +3554,7 @@ form.subscribe_form input {
 }
 
 .prof_info_title a {
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .prof_info_title a:hover {
@@ -3613,9 +3618,9 @@ form.subscribe_form input {
 }
 
 .prorder_btn a {
-    color: #FD3D57;
+    color: #403dfd;
     font-size: 16px;
-    border: 1px solid #FD3D57;
+    border: 1px solid #403dfd;
     border-radius: 3px;
     padding: 8px 24px;
     font-weight: 500;
@@ -3627,7 +3632,7 @@ form.subscribe_form input {
     -o-transition: 0.5s;
 }
 .prorder_btn a:hover {
-    background: #FD3D57;
+    background: #403dfd;
     color: #fff;
 }
 .prorder_txt h5 {
@@ -3650,7 +3655,7 @@ form.subscribe_form input {
     -webkit-transition: .2s;
     -o-transition: .2s;
     transition: .2s;
-    border: 1px solid #fd3d57;
+    border: 1px solid #403dfd;
     height: 32px;
     width: 32px;
     border-radius: 3px;
@@ -3659,7 +3664,7 @@ form.subscribe_form input {
 }
 
 .profile_hambarg:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .acprof_info_wrap {
@@ -3949,7 +3954,7 @@ label.upload_img {
     display: block;
     padding: 12px 10px;
     border-radius: 5px;
-    border: 1px dashed #FD3D57;
+    border: 1px dashed #403dfd;
     text-align: center;
     cursor: pointer;
     -webkit-transition: .2s;
@@ -4062,7 +4067,7 @@ label.upload_img:hover {
 }
 
 .product_slider_2 button.slick-arrow:hover {
-    background: #fd3d57;
+    background: #403dfd;
     color: #fff;
 }
 
@@ -4088,7 +4093,7 @@ label.upload_img:hover {
 }
 
 .tophead_items a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .tophead_items .nice-select {
@@ -4110,11 +4115,11 @@ label.upload_img:hover {
 }
 
 .tophead_items .nice-select:hover .current {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .tophead_items .nice-select:hover:after {
-    border-color: #fd3d57;
+    border-color: #403dfd;
 }
 
 .tophead_items a span {
@@ -4335,7 +4340,7 @@ label.upload_img:hover {
     padding-bottom: 32px;
 }
 .accordion-button:not(.collapsed) {
-    color: #fd3d57;
+    color: #403dfd;
     background-color: #FFF;
 }
 
@@ -4503,7 +4508,7 @@ label.upload_img:hover {
 }
 
 .disc_tag {
-    background: #fd3d57;
+    background: #403dfd;
     padding: 4px;
     color: #fff;
     font-size: 12px;
@@ -4520,7 +4525,7 @@ label.upload_img:hover {
     top: 2px;
     width: 0;
     border-left: 13px solid transparent;
-    border-right: 13px solid #fd3d57;
+    border-right: 13px solid #403dfd;
     border-bottom: 10px solid transparent;
     border-top: 10px solid transparent;
 }
@@ -4556,7 +4561,7 @@ label.upload_img:hover {
 
 /* home 3 */
 header.home-3 {
-    background: #FD3D57;
+    background: #403dfd;
 }
 
 .home_2_hero_wrp.home-3 {
@@ -4590,7 +4595,7 @@ nav.home-3 {
 }
 
 .home-3 .nav_bar > li > a:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .home-3 .all_category {
@@ -4710,7 +4715,7 @@ nav.home-3 {
     line-height: 16px;
     padding: 8px 5px;
     color: #fff;
-    background: #FD3D57;
+    background: #403dfd;
     border-radius: 3px;
     margin-right: 8px;
     width: 36px;
@@ -4718,7 +4723,7 @@ nav.home-3 {
 }
 
 .time_sep {
-    color: #FD3D57;
+    color: #403dfd;
     margin-right: 8px;
     font-size: 16px;
     font-weight: 500;
@@ -4727,7 +4732,7 @@ nav.home-3 {
 .seemore_2 a {
     font-weight: 500;
     font-size: 15px;
-    color: #FD3D57;
+    color: #403dfd;
 }
 
 .seemore_2 a span {
@@ -4847,7 +4852,7 @@ nav.home-3 {
 }
 
 .single_category_2:hover h5 {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 /* best selling */
@@ -4958,7 +4963,7 @@ nav.home-3 {
 }
 
 .close_popup:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .popup_content p {
@@ -5029,7 +5034,7 @@ span.remove_cart {
 }
 
 span.remove_cart:hover {
-    color: #fd3d57;
+    color: #403dfd;
 }
 
 .cartdrop_footer .default_btn {
@@ -5043,7 +5048,7 @@ span.remove_cart:hover {
 }
 
 .mobile_title {
-    background: #FD3D57;
+    background: #403dfd;
     text-align: center;
     color: #fff;
     padding: 14px 0px;
